# where-tickets

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  Procfile  README.md  docker-compose.yml  justfile
.claude/agents/: bedrock-llm.md  postgres-database.md  python-backend.md  react-native-mobile.md
.github/scripts/: setup-branch-protection.sh
.github/workflows/: backend.yml  infra.yml  meta.yml  mobile.yml
backend/: .env.example  piccolo_conf.py  pyproject.toml
backend/app/: broken.py  config.py  db.py  main.py  migrations.py  tables.py
backend/app/routers/: health.py
backend/piccolo_migrations/: 0001_init.py  piccolo_app.py
backend/spikes/: __init__.py
backend/spikes/integration/: __init__.py  adapter.py  report.py  runner.py
backend/spikes/route_engine_algorithmic/: __init__.py  engine.py  rules.py  run.py
backend/spikes/route_engine_llm/: __init__.py  bedrock_client.py  compare.py  corpus.py  engine.py  models.py  operations.py  pricing.py  prompts.py  report.py  run.py  scoring.py
backend/tests/: conftest.py  test_health.py
backend/tests/corpus/: conftest.py  test_integration_generator.py  test_noise.py  test_pdf_runner.py  test_pdf_validator.py
backend/tests/extraction/: conftest.py  fakes.py  test_bedrock_wrapper.py  test_cli.py  test_extract_failure.py  test_extract_sonnet_fallback.py  test_extract_text_path.py  test_extract_vision_path.py  test_pdf_helpers.py  test_schema_contract.py  test_smoke.py
backend/tests/spikes/: conftest.py  test_accommodation_fragment.py  test_adapter.py  test_algorithmic_corpus.py  test_algorithmic_engine.py  test_applier.py  test_city_identity.py  test_compare.py  test_engine_contract.py  test_integration_runner.py  test_leg_view.py  test_pricing.py  test_report.py  test_rules_new_shape.py  test_run_cli.py  test_scoring.py
backend/where_tickets/: __init__.py
backend/where_tickets/extraction/: README.md  __init__.py  __main__.py  bedrock.py  cli.py  extract.py  pdf.py  prompts.py  schema.py
context/product/: architecture.md  product-definition.md  roadmap.md
context/spec/001-project-bootstrap/: functional-spec.md  tasks.md  technical-considerations.md
context/spec/002-engine-spike/: functional-spec.md  tasks.md  technical-considerations.md
corpus/: README.md  validate.py
corpus/generator/: __init__.py  __main__.py  cities.py  fragmenter.py  matrix.py  orderings.py  scenario.py  shapes.py
corpus/integration/: README.md
corpus/integration/generator/: __init__.py  (+4 more)
corpus/pdf/: README.md  runner.py  validate.py
corpus/schema/: expected-route.schema.json  extracted-fragment.schema.json
infra/: README.md
mobile/: .env.example  .prettierignore  App.tsx  app.json  jest.config.js  jest.setup.js  package-lock.json  package.json
mobile/__tests__/: App.test.tsx
mobile/android/: gradle.properties  settings.gradle
mobile/ios/: Podfile
(+1992 files in other folders)
