[project]
name = "where-tickets-backend"
version = "0.1.0"
description = "Where Tickets backend API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "piccolo[postgres]",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "pyright",
]
# Optional group for the LLM route-engine spike. Kept OUT of the default
# runtime deps and out of `dev`, so the FastAPI image and normal CI stay lean
# and the offline spike tests run even when this is not installed.
# Install with: uv sync --group spike
spike = [
    "anthropic[bedrock]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
