[project]
name = "where-tickets-backend"
version = "0.1.0"
description = "Where Tickets backend API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "piccolo[postgres]",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "pyright",
]
# Optional group for the LLM route-engine spike. Kept OUT of the default
# runtime deps and out of `dev`, so the FastAPI image and normal CI stay lean
# and the offline spike tests run even when this is not installed.
# Install with: uv sync --group spike
spike = [
    "anthropic[bedrock]",
]
# Optional group for the PDF extractor (spec 006: AI Document Understanding).
# Kept out of runtime deps and `dev` so the FastAPI ECS image stays lean —
# extraction runs in Lambda, and the extraction tests fake the Bedrock client.
# Brings PyMuPDF (text + image extraction), the Bedrock Anthropic SDK, and
# jsonschema (validate model JSON output against the ExtractedFields schema).
# Install with: uv sync --group extraction
extraction = [
    "anthropic[bedrock]",
    "pymupdf",
    "jsonschema",
]
# Optional group for the mock-document PDF corpus (spec 005). Kept out of
# runtime deps and `dev` so the FastAPI image stays lean. WeasyPrint pulls in
# native deps (Pango / Cairo) - see corpus/pdf/README.md for local-dev setup.
# Install with: uv sync --group corpus
corpus = [
    "fpdf2",
    "weasyprint==68.1",
    "jinja2==3.1.6",
    "pymupdf",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
